RESOLVED FIXED106129
Full screen mode should not exit when application resigns active state.
https://bugs.webkit.org/show_bug.cgi?id=106129
Summary Full screen mode should not exit when application resigns active state.
Jer Noble
Reported 2013-01-04 13:11:41 PST
Full screen mode should not exit when application resigns active state.
Attachments
Patch (2.87 KB, patch)
2013-01-04 13:21 PST, Jer Noble
darin: review+
Jer Noble
Comment 1 2013-01-04 13:12:00 PST
Jer Noble
Comment 2 2013-01-04 13:15:39 PST
Now that we use the NSWindow full screen API, and the full screen window gets its own space, there is no longer a reason to exit full screen mode when the application resigns active.
Jer Noble
Comment 3 2013-01-04 13:21:05 PST
Darin Adler
Comment 4 2013-02-25 10:04:53 PST
Comment on attachment 181367 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=181367&action=review > Source/WebKit2/ChangeLog:8 > + Remove the applicationDidResignActive: notification from WKFullScreenWindowController. Chang log should say why, not just what is changing.
Jer Noble
Comment 5 2013-02-25 15:45:26 PST
Updated the change log to read: Now that full screen windows get their own full screen space, there is no reason to exit full screen mode when the application resigns active state. Instead, the windowserver will bring the space containing the newly active application to the foreground. The user can then swipe back to the full screen space (or use Mission Control) to get back to the full screen window.
Jer Noble
Comment 6 2013-02-25 15:50:13 PST
Note You need to log in before you can comment on or make changes to this bug.